# iamdhakrey

./: .air.toml  .gitignore  Cargo.toml  README.md  build.sh  docker-compose.yml  go.mod  go.sum  main.go  rustfmt.toml
.github/workflows/: metrics.yml  snake.yml  update-readme-with-blog.yml  waka-readme.yml
cmd/: root.go  start.go  version.go
config/: config.go
database/: db.go
handlers/: user.go
logger/: logger.go
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250603_115854_create_user_spend_table.rs
model/: config.go  user.go  user_profile.go
routes/: routes.go  v1.go
server/: server.go  setup.go
src/: app.rs  auth.rs  config.rs  db.rs  docs.rs  jwt.rs  logger.rs  main.rs  middleware.rs  models.rs  response.rs  routes.rs  state.rs
src/api/: mod.rs  routes.rs
src/api/v1/: mod.rs  response.rs  routes.rs  validators.rs
src/api/v1/auth/: handlers.rs  jwt.rs  mod.rs  router.rs  schema.rs  validators.rs
src/api/v1/auth/user/: create.rs  hash.rs  info.rs  mod.rs
src/api/v1/spend/: add.rs  handlers.rs  mod.rs  schema.rs
src/entities/: mod.rs  prelude.rs  spend.rs  user.rs  user_profile.rs
