[package]
name = "Spendlite-API"
version = "0.1.0"
edition = "2024"

[features]
default = ["hot-reload"]
hot-reload = ["notify"]

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.41"
directories = "6.0.0"
jsonwebtoken = "9.3.1"
notify = { version = "8.0.0", optional = true }
oauth2 = "5.0.0"
once_cell = "1.21.3"
sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["sync"] }
toml = "0.8.22"
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = { version = "0.2.0" }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = " 8", features = ["axum"] }
uuid = "1.17.0"
validator = { version = "0.20.0", features = ["derive"] }
